tests/ui/traits/bound/on-structs-and-enums-static.stderr
error[E0277]: the trait bound `usize: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-static.rs:9:11
   |
LL | static X: Foo<usize> = Foo {
   |           ^^^^^^^^^^ the trait `Trait` is not implemented for `usize`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/on-structs-and-enums-static.rs:1:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^
note: required by a bound in `Foo`
  --> $DIR/on-structs-and-enums-static.rs:5:14
   |
LL | struct Foo<T:Trait> {
   |              ^^^^^ required by this bound in `Foo`

error[E0277]: the trait bound `{integer}: Trait` is not satisfied
  --> $DIR/on-structs-and-enums-static.rs:10:8
   |
LL |     x: 1,
   |        ^ the trait `Trait` is not implemented for `{integer}`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/on-structs-and-enums-static.rs:1:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^
note: required by a bound in `Foo`
  --> $DIR/on-structs-and-enums-static.rs:5:14
   |
LL | struct Foo<T:Trait> {
   |              ^^^^^ required by this bound in `Foo`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
